--- a/views/jobs.ejs
+++ b/views/jobs.ejs
@@ -1,16 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jobs</title>
+    <link rel="stylesheet" href="/assets/bootstrap.css">
 </head>
+
 <body>
     <h1>Lista de trabajos</h1>
+    <section class="buscador">
+        <div class="container">
+            <div class="flex-row ">
+                <div class="d-flex justify-content-center ">
+                    <div class="input-group mb-3 col-md-8">
+                        <select class="custom-select" id="jobType" onchange="clean()">
+                            <option selected>Selecciona Especialidad</option>
+                            <option value="Javascript">Javascript</option>
+                            <option value="Python">Python</option>
+                            <option value="Vue">Vue</option>
+                            <option value="PHP">PHP</option>
+                            <option value="react">React</option>
+                            <option value="ux">UX</option>
+                        </select>
+                        <select class="custom-select" id="place" onchange="clean()">
+                            <option selected>Selecciona Ubicación</option>
+                            <option value="usa">USA</USAion>
+                            <option value="Germany">Alemania</option>
+                            <option value="India">India</option>
+                            <option value="Canada">Canada</option>
+                            <option value="Netherland">Holanda</option>
+                        </select>
+
+                        <div class="input-group-append">
+                            <button id="buscar" class="btn btn-outline-secondary" type="button"
+                                onchange="clean()">Buscar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="resultado">
+        <div class="container">
+            <div class="row" id="lista_jobs">
+
+                <div class="card mb-3 ml-3">
+                    <div class="row no-gutters">
+                        <div class="col-md-4 d-flex justify-content-center align-items-center">
+                            <img src="${job.company_logo}" onerror="imgError(this);" class="card-img" alt="logo">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">${job.title}</h5>
+                                <span>${job.location}</span> <span>${job.type}</span>
+                                <button type="button" class="btn btn-primary" data-toggle="modal"
+                                    data-target="#${job.id}">
+                                    Launch demo modal
+                                </button>
+                                <div class="modal fade" id="${job.id}" tabindex="-1" aria-labelledby="exampleModalLabel"
+                                    aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="MdalLabel">Descripción del puesto</h5>
+                                                <button type="button" class="close" data-dismiss="modal"
+                                                    aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <small>
+                                                    ${job.description}
+                                                </small>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary"
+                                                    data-dismiss="modal">Cerrar</button>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <a class="btn btn-primary btn-small" data-toggle="collapse" href="#${job.id}"
+                                    role="button" aria-expanded="false" aria-controls="collapseExample">
+                                    Ver más
+                                </a>
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js" integrity="sha512-quHCp3WbBNkwLfYUMd+KwBAgpVukJu5MncuQaWXgCrfgcxCJAq/fo+oqrRKOj+UKEmyMCG3tb8RB63W+EmrOBg==" crossorigin="anonymous"></script>
+                                <div class="collapse" id="${job.id}">
+                                    <small>
+                                        ${job.description}
+                                    </small>
+                                </div>
+                                <p class="card-text reduce"><small>sss</small></p>
+                                <p class="card-text"><small class="text-muted">${job.created_at}</small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </section>
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="/assets/bootstrap.js"></script>
+    <script src="/assets/axios.js"></script>
     <script src="/actions/jobs.js"></script>
 </body>
+
 </html>
