--- a/views/jobs.ejs
+++ b/views/jobs.ejs
@@ -44,63 +44,65 @@
     </section>
     <section class="resultado">
         <div class="container">
-            <div class="row" id="lista_jobs">
-
-                <div class="card mb-3 ml-3">
-                    <div class="row no-gutters">
-                        <div class="col-md-4 d-flex justify-content-center align-items-center">
-                            <img src="${job.company_logo}" onerror="imgError(this);" class="card-img" alt="logo">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">${job.title}</h5>
-                                <span>${job.location}</span> <span>${job.type}</span>
-                                <button type="button" class="btn btn-primary" data-toggle="modal"
-                                    data-target="#${job.id}">
-                                    Launch demo modal
+            <div class="row" >
+                
+           <div class="card-columns" id="lista_jobs">
+        </div>
+                <button type="button" class="btn btn-outline-success btn-sm" data-toggle="modal"
+                    data-target="#lata">
+                    Ver más
+                </button>
+                <div class="modal fade" id="lata" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="MdalLabel">Descripción del puesto</h5>
+                                <button type="button" class="close" data-dismiss="modal"
+                                    aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
                                 </button>
-                                <div class="modal fade" id="${job.id}" tabindex="-1" aria-labelledby="exampleModalLabel"
-                                    aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="MdalLabel">Descripción del puesto</h5>
-                                                <button type="button" class="close" data-dismiss="modal"
-                                                    aria-label="Close">
-                                                    <span aria-hidden="true">&times;</span>
-                                                </button>
-                                            </div>
-                                            <div class="modal-body">
-                                                <small>
-                                                    ${job.description}
-                                                </small>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary"
-                                                    data-dismiss="modal">Cerrar</button>
+                            </div>
+                            <div class="modal-body">
+                                <small>
+                                    ${job.description}
+                                </small>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary"
+                                    data-dismiss="modal">Cerrar</button>
 
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <a class="btn btn-primary btn-small" data-toggle="collapse" href="#${job.id}"
-                                    role="button" aria-expanded="false" aria-controls="collapseExample">
-                                    Ver más
-                                </a>
-
-
-                                <div class="collapse" id="${job.id}">
-                                    <small>
-                                        ${job.description}
-                                    </small>
-                                </div>
-                                <p class="card-text reduce"><small>sss</small></p>
-                                <p class="card-text"><small class="text-muted">${job.created_at}</small></p>
                             </div>
                         </div>
                     </div>
                 </div>
 
+
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                    Launch demo modal
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                ...
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
