--- a/views/jobs.ejs
+++ b/views/jobs.ejs
@@ -44,76 +44,25 @@
     </section>
     <section class="resultado">
         <div class="container">
-            <div class="row" >
-                
-           <div class="card-columns" id="lista_jobs">
-        </div>
-                <button type="button" class="btn btn-outline-success btn-sm" data-toggle="modal"
-                    data-target="#lata">
-                    Ver más
-                </button>
-                <div class="modal fade" id="lata" tabindex="-1" aria-labelledby="exampleModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="MdalLabel">Descripción del puesto</h5>
-                                <button type="button" class="close" data-dismiss="modal"
-                                    aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                <small>
-                                    ${job.description}
-                                </small>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary"
-                                    data-dismiss="modal">Cerrar</button>
+            <div class="row">
 
-                            </div>
-                        </div>
-                    </div>
+                <div class="card-columns" id="lista_jobs">
                 </div>
-
-
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                    Launch demo modal
-                </button>
-
-                <!-- Modal -->
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                ...
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
+                <div id="modal_container"></div>
             </div>
         </div>
     </section>
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="/assets/bootstrap.js"></script>
     <script src="/assets/axios.js"></script>
     <script src="/actions/jobs.js"></script>
+    <script>
+        $('#1').on('shown.bs.modal', function () {
+  $('#1').trigger('focus')
+})
+    </script>
 </body>
 
 </html>
