--- a/views/jobs.ejs
+++ b/views/jobs.ejs
@@ -6,13 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jobs</title>
     <link rel="stylesheet" href="/assets/bootstrap.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 
-<body>
-    <h1>Lista de trabajos</h1>
-    <section class="buscador">
-        <div class="container">
-            <div class="flex-row ">
+<body class="d-flex flex-column sticky-footer-wrapper min-vh-100"">
+
+    <section class="buscador pb-5 mb-5 bg-success">
+
+        <div class="container ">
+            <div class="flex-row top">
+                <h1 class="title  pt-5 pb-3">ecampJobs<small> by Edutecno</small></h1>
+                <p class="text-center">Selecciona tu búsqueda</p>
+            </div>
+            <div class="flex-row">
+                
                 <div class="d-flex justify-content-center ">
                     <div class="input-group mb-3 col-md-8">
                         <select class="custom-select" id="jobType" onchange="clean()">
@@ -34,8 +42,7 @@
                         </select>
 
                         <div class="input-group-append">
-                            <button id="buscar" class="btn btn-outline-secondary" type="button"
-                                onchange="clean()">Buscar</button>
+                            <button id="buscar" class="btn btn-dark" type="button" onchange="clean()">Buscar</button>
                         </div>
                     </div>
                 </div>
@@ -45,23 +52,28 @@
     <section class="resultado">
         <div class="container">
             <div class="row">
-
                 <div class="card-columns" id="lista_jobs">
                 </div>
-                <div id="modal_container"></div>
+                <div id="modal_container">
+                   
             </div>
         </div>
     </section>
 
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <footer class="footer mt-auto py-3  bg-success">
+        <div class="container">
+          <p class="text-center">Made with love by and318.</p>
+        </div>
+      </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="/assets/bootstrap.js"></script>
     <script src="/assets/axios.js"></script>
     <script src="/actions/jobs.js"></script>
     <script>
         $('#1').on('shown.bs.modal', function () {
-  $('#1').trigger('focus')
-})
+            $('#1').trigger('focus')
+        })
     </script>
 </body>
 
